# CSCI201-40C-FW-202420-TR-81X

./: .gitignore
.devcontainer/: devcontainer.json
08_19_2024/: clock  clock.cpp  clock.h  main  main.cpp
08_21_2024/: clock  clock.cpp  clock.h  drink  drink.cpp  drink.h  main  main.cpp  makefile
08_26_2024/: donut.h  employee  employee.cpp  employee.h  main  main.cpp  person  person.cpp  person.h
09_02_2024/: main.cpp  makefile
09_04_2024/: drink  drink.cpp  drink.h  drinkOrder  drinkOrder.cpp  drinkOrder.h  main  main.cpp  makefile
09_04_2024/Unit Test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  runTests  tests.cpp
09_09_2024/: employee  employee.cpp  employee.h  input.txt  main  main.cpp  makefile  person  person.cpp  person.h
09_09_2024/product_demo/: clock  input.txt  main  main.cpp  makefile  order  order.cpp  order.h  product  product.h
09_11_2024/: clock  clock.cpp  clock.h  main  main.cpp  makefile  order  order.cpp  product  product.cpp
09_16_2024/: clock  clock.cpp  clock.h  main  main.cpp  makefile  order  order.h  product  product.cpp  product.h
09_23_2024/: clock.cpp  clock.h  clockExcept.cpp  clockExcept.h  drink.cpp  drink.h  main.cpp  makefile  numberconverter.py
09_25_2024/: HTTPRequest.hpp  PracticalSocket.cpp  PracticalSocket.h  client  client.cpp  main  main.cpp  makefile  server  server.cpp  serverDemo1.cpp
guiDemos/Drinks/: Drinks.upp  drinks.cpp  drinks.h  drinks.lay  main.cpp
guiDemos/HelloWorld1/: main.cpp
guiDemos/HelloWorld2/: main.cpp
(+14 files in other folders)
